--- a/MezogazdasagiDron/Views/Home/Index.cshtml
+++ b/MezogazdasagiDron/Views/Home/Index.cshtml
@@ -44,6 +44,9 @@
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#contact">Rólunk</a>
                     </li>
+                    <li>
+                        <a class="nav-link js-scroll-trigger" href="#contact">Bejelentkezés</a>
+                    </li>
                 </ul>
             </div>
         </div>
