add auth logic to the main project, remove demo projects

--- a/MezogazdasagiDron/Views/Home/Index.cshtml
+++ b/MezogazdasagiDron/Views/Home/Index.cshtml
@@ -44,8 +44,8 @@
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#contact">Rólunk</a>
                     </li>
-                    <li>
-                        <a class="nav-link js-scroll-trigger" href="#contact">Bejelentkezés</a>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="/uploader">Feltöltés</a>
                     </li>
                 </ul>
             </div>
