--- a/MezogazdasagiDron/Views/Home/Index.cshtml
+++ b/MezogazdasagiDron/Views/Home/Index.cshtml
@@ -18,45 +18,14 @@
     <link href="~/Content/agency.min.css" rel="stylesheet" />
     <link href="~/Content/agency.css" rel="stylesheet" />*@
 </head>
+
 <body id="page-top">
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-        <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">Argon</a>
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                Menu
-                <i class="fa fa-bars"></i>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav text-uppercase ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#services">Aktualitások</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#portfolio">Szolgáltatások</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#about">Kapcsolat</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#team">Webshop</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#contact">Rólunk</a>
-                    </li>
-                    <li>
-                        <a class="nav-link js-scroll-trigger" href="#contact">Bejelentkezés</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
     <!-- Header -->
     <header class="masthead">
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">AGRON</div>
-                <div class="intro-heading text-uppercase">It's Nice To Meet You</div>
+                @*<div class="intro-heading text-uppercase">It's Nice To Meet You</div>*@
                 <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Mezőgazdasági Drónok</a>
             </div>
         </div>
@@ -197,83 +166,16 @@
         </div>
     </section>
     <!-- About -->
-    <section id="about" style="background-image: url('../../Images/contact-page-background.jpg');" >
+    <section id="about" class="contactpage_bg">
         <div class="container" >
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading text-uppercase">Kapcsolat</h2>
-                    <h3 class="section-subheading text-muted">Az alábbi módokon tud kapcsolatba lépni velünk</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <ul class="timeline">
-                        <li>
-                            <div class="timeline-image">
-                                <img class="rounded-circle img-fluid" src="img/about/1.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>2009-2011</h4>
-                                    <h4 class="subheading">Our Humble Beginnings</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="rounded-circle img-fluid" src="img/about/2.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>March 2011</h4>
-                                    <h4 class="subheading">An Agency is Born</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="timeline-image">
-                                <img class="rounded-circle img-fluid" src="img/about/3.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="rounded-circle img-fluid" src="img/about/4.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>July 2014</h4>
-                                    <h4 class="subheading">Phase Two Expansion</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <h4>
-                                    Be Part
-                                    <br>Of Our
-                                    <br>Story!
-                                </h4>
-                            </div>
-                        </li>
-                    </ul>
+                    <h3 class="section-heading text-muted">Az alábbi módokon tud kapcsolatba lépni velünk</h3>
+                    <h3 class="section-heading" style="color:beige">Telefon : +36 20 911 0101</h3>
+                    <h3 class="section-heading" style="color:beige">Email : info@mezogazdasagidron.hu</h3>
+                    <h3 class="section-heading "><a href="https://www.facebook.com/flyingeyes.agron/">FACEBOOK</a></h3>
+                    
                 </div>
             </div>
         </div>
