--- a/MezogazdasagiDron/Views/Home/Index.cshtml
+++ b/MezogazdasagiDron/Views/Home/Index.cshtml
@@ -18,15 +18,14 @@
     <link href="~/Content/agency.min.css" rel="stylesheet" />
     <link href="~/Content/agency.css" rel="stylesheet" />*@
 </head>
-
 <body id="page-top">
     <!-- Header -->
     <header class="masthead">
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">AGRON</div>
+                <img src="~/Images/agronfinaloldalra.png" style="width:633px;height:236px" />
                 @*<div class="intro-heading text-uppercase">It's Nice To Meet You</div>*@
-                <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Mezőgazdasági Drónok</a>
+                <div><a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Mezőgazdasági Drónok</a></div>
             </div>
         </div>
     </header>
