--- a/MezogazdasagiDron/Views/Home/Uploader.cshtml
+++ b/MezogazdasagiDron/Views/Home/Uploader.cshtml
@@ -1,1 +1,56 @@
-﻿<h1>OK!</h1>
+﻿<!-- Header -->
+<header class="masthead">
+    <div class="container" style="height: 120px">
+    </div>
+</header>
+<section id="home">
+    <ul>
+        <li><a href="/farm/create">Új farm létrehozása</a></li>
+    </ul>
+</section>
+@*<section id="create-farm">
+    <div class="container" id="create-farm">
+        <div class="row">
+            <div class="col-lg-12">
+                @using (Html.BeginForm("Create", "Farm", FormMethod.Post))
+                {
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <input class="form-control" id="farmName" type="text" placeholder="Farm neve *" required="" data-validation-required-message="Kérem, adja meg a farm nevét!">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <div class="success"></div>
+                                <button id="create-farm" class="btn btn-primary btn-xl text-uppercase" type="submit">Farm létrehozása</button>
+                            </div>
+                        </div>
+                    </div>
+                }
+            </div>
+        </div>
+    </div>
+</section>*@
+@*<section id="upload-photo">
+    <div class="container" id="upload-photo">
+        @using (Html.BeginForm("Upload", "Image", FormMethod.Post, new { enctype = "multipart/form-data" }))
+        {
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <input class="form-control" id="photo" type="file" required="" data-validation-required-message="Kérem, válassza ki a feltöltendő képet!">
+                        <p class="help-block text-danger"></p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <div class="success"></div>
+                        <button id="upload-photo" class="btn btn-primary btn-xl text-uppercase" type="submit">Kép feltöltése</button>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+</section>*@
